# revenue-forecast-control-tower

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
artifacts/: executive_summary.html  kpi_brief.md
dashboard/: index.html  package.json  styles.css  tsconfig.json
dashboard/src/: main.ts
data/processed/: dashboard_snapshot.json  forecast_summary.json  pipeline_risk.csv  regional_forecast.csv
data/raw/: customer_contracts.csv  daily_bookings.csv  pipeline_snapshots.csv  product_usage_signals.csv
docs/: architecture.md  operating_model.md
lambdas/alert_router/: handler.py
lambdas/daily_signal_ingest/: handler.py
sql/: 001_schema.sql  002_seed_reference.sql  010_views.sql  sample_queries.sql
src/revenue_forecast_control_tower/: __init__.py  api.py  cli.py  config.py  data_generation.py  models.py  repository.py  service.py
tests/: test_api.py  test_pipeline.py
