[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revenue-forecast-control-tower"
version = "0.1.0"
description = "FastAPI, PostgreSQL, AWS Lambda, and dashboard-driven commercial forecasting platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
]

[project.scripts]
revenue-forecast-control-tower = "revenue_forecast_control_tower.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
